2010-09-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected handling of empty files (avoid PHP warnings)

2010-04-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed service to use new connector base class
	* Released version 1.0.1

2009-01-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 0.1.0