@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<description>General labels for CSV Connector Service</description>
+		<type>module</type>
+		<csh_table></csh_table>
+		<fileId>EXT:svonnector_csv/locallang.xml</fileId>
+		<labelContext type="array">
+		</labelContext>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="config_debug">Debug: Check to turn on debugging to the Dev Log. Debugging also takes place if TYPO3_DLOG is true. Requires devlog or similar extension.</label>
+		</languageKey>
+	</data>
+</T3locallang>
