@@ -1,3 +1,7 @@
+2010-11-30 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Moved extension configuration labels to locallang file
+
 2010-09-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Corrected handling of empty files (avoid PHP warnings)
